--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -215,6 +215,7 @@ dependencies {
     }
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation "com.android.support:support-compat:28.0.0"
+    implementation project(':react-native-push-notification')
 }
 
 // Run this once to be able to run the application with BUCK
