--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "react-native": {
-    "messaging_android_headless_task_timeout": 30000,
-    "messaging_android_notification_channel_id": "high-priority"
+    "messaging_android_notification_channel_id": "high-priority",
+    "messaging_ios_auto_register_for_remote_messages": false
   }
 }
