--- a/ios/RnfSimple/Info.plist
+++ b/ios/RnfSimple/Info.plist
@@ -42,6 +42,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
